force-app/main/default/objects/Exl_WorkOrder__mdt/Exl_WorkOrder__mdt.object-meta.xml
<CustomObject>
    <label>Work Order</label>
    <pluralLabel>Work Orders</pluralLabel>
</CustomObject>