force-app/main/default/objects/Exl_WorkOrder__mdt/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apply Exclusion</fullName>
                <default>true</default>
                <label>Apply Exclusion</label>
            </value>
            <value>
                <fullName>Self Exclusion in both states</fullName>
            </value>
            <value>
                <fullName>Self Exclusion in NSW with Problem Gambling in Qld</fullName>
            </value>
            <value>
                <fullName>Self Exclusion in QLD with Problem Gambling in NSW</fullName>
            </value>
            <value>
                <fullName>Problem Gambling in both states</fullName>
            </value>
            <value>
                <fullName>Venue Exclusion in NSW</fullName>
            </value>
            <value>
                <fullName>Venue Exclusion in QLD</fullName>
            </value>
            <value>
                <fullName>NICC Exclusion in NSW</fullName>
            </value>
            <value>
                <fullName>Police Exclusion in NSW</fullName>
            </value>
            <value>
                <fullName>Police Exclusion in QLD</fullName>
            </value>
            <value>
                <fullName>TP24HR</fullName>
            </value>
            <value>
                <fullName>TP7DAY</fullName>
            </value>
            <value>
                <fullName>WOL in NSW</fullName>
            </value>
            <value>
                <fullName>WOL in QLD</fullName>
            </value>
            <value>
                <fullName>WOL AML + Venue AML in NSW</fullName>
            </value>
            <value>
                <fullName>Extend</fullName>
            </value>
            <value>
                <fullName>Apply PoP</fullName>
            </value>
            <value>
                <fullName>Revoke</fullName>
            </value>
            <value>
                <fullName>Self Exclusion in NSW only</fullName>
                <isActive>false</isActive>
                <label>Self Exclusion in NSW only</label>
            </value>
            <value>
                <fullName>Self Exclusion in QLD only</fullName>
                <isActive>false</isActive>
                <label>Self Exclusion in QLD only</label>
            </value>
            <value>
                <fullName>Timed Play 24hr</fullName>
                <isActive>false</isActive>
                <label>Timed Play 24hr</label>
            </value>
            <value>
                <fullName>Timed Play 7day</fullName>
                <isActive>false</isActive>
                <label>Timed Play 7day</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>