force-app/main/default/objects/Exl_WorkOrder__mdt/fields/Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Mandatory__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mandatory</label>
    <type>Checkbox</type>
</CustomField>