force-app/main/default/objects/Exl_WorkOrder__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apply Exclusion</fullName>
                <default>true</default>
                <label>Apply Exclusion</label>
            </value>
            <value>
                <fullName>Revoke Exclusion</fullName>
            </value>
            <value>
                <fullName>Amendment In Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>