force-app/main/default/objects/Exl_WorkOrder__mdt/fields/Work_Order_Label__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Label__c</fullName>
    <label>Work Order Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>