force-app/main/default/objects/Exl_WorkOrder__mdt/fields/Work_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Type__c</fullName>
    <label>Work Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PoP</fullName>
                <default>true</default>
                <label>PoP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>