force-app/main/default/objects/Exl_WorkOrder__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Work_Order_Label__c</columns>
    <columns>Record_Type__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Sequence__c</columns>
    <columns>Mandatory__c</columns>
    <columns>Jurisdiction__c</columns>
    <columns>Work_Order_Type__c</columns>
    <columns>is_Button__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>