force-app/main/default/objects/Exl_WorkOrder__mdt/listViews/Amendment_In_Progress.listView-meta.xml
<ListView>
    <fullName>Amendment_In_Progress</fullName>
    <columns>MasterLabel</columns>
    <columns>Work_Order_Label__c</columns>
    <columns>Jurisdiction__c</columns>
    <columns>Sequence__c</columns>
    <columns>Mandatory__c</columns>
    <columns>Record_Type__c</columns>
    <columns>DeveloperName</columns>
    <columns>Case_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type__c</field>
        <operation>equals</operation>
        <value>Amendment In Progress</value>
    </filters>
    <label>Amendment In Progress</label>
</ListView>