force-app/main/default/objects/Exl_WorkOrder__mdt/listViews/Revoke_WOs.listView-meta.xml
<ListView>
    <fullName>Revoke_WOs</fullName>
    <columns>MasterLabel</columns>
    <columns>Work_Order_Label__c</columns>
    <columns>Record_Type__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Sequence__c</columns>
    <columns>Jurisdiction__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type__c</field>
        <operation>equals</operation>
        <value>Revoke Exclusion</value>
    </filters>
    <label>Revoke WOs</label>
</ListView>